# price_check_with_lambda

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  utils.rs
