[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
# *** Email ***
sendgrid = "0.17.4"

tokio = { version= "1", features = ["full"] }
reqwest = "0.11.7"
regex = "1"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"

dotenv = "0.15"
